...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.538" />

        <Button
            android:id="@+id/denySaveLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lawnLocationDenyDescription"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/lawnLocationDeny"
...
            android:visibility="visible"
            app:layout_constraintLeft_toRightOf="@id/noGuideline2"
            app:layout_constraintRight_toLeftOf="@id/noGuideline"
            app:layout_constraintTop_toTopOf="@id/heightButtonsGuide" />

        <Button
            android:id="@+id/acceptSaveLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lawnLocationAcceptDescription"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/lawnLocationAccept"
...
