...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <TextView
            android:id="@+id/startDateSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingStart="15dp"
            android:paddingLeft="25dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.51" />

        <TextView
            android:id="@+id/endDateSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
...
